# docs/swagger.json
@@ -1,34 +1,33 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample swagger for Golang Template API",
-        "title": "Golang Template API",
+        "description": "Create apps, services and infrastructure.",
+        "title": "Pets API",
         "contact": {},
         "version": "1.0"
     },
-    "basePath": "/.",
     "paths": {
-        "/ping": {
-            "get": {
-                "description": "Ping",
-                "produces": [
-                    "text/plain"
-                ],
+        "/apps": {
+            "post": {
                 "tags": [
-                    "Check"
+                    "Apps"
                 ],
-                "summary": "Check if the instance is online",
-                "responses": {
-                    "200": {
-                        "description": "pong",
+                "summary": "Creates an IskayPet Application",
+                "parameters": [
+                    {
+                        "description": "Body params",
+                        "name": "createAppModel",
+                        "in": "body",
+                        "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.CreateAppModel"
                         }
                     }
-                }
+                ],
+                "responses": {}
             }
         },
-        "/repositories/groups": {
+        "/apps/groups": {
             "get": {
                 "description": "Needed for create a project in a specific group",
                 "consumes": [
@@ -40,7 +39,7 @@
                 "tags": [
                     "Groups"
                 ],
-                "summary": "Get all groups",
+                "summary": "Get all groups from GitLab",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -49,6 +48,81 @@
                             "items": {
                                 "$ref": "#/definitions/model.AppGroupModel"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/apps/search": {
+            "get": {
+                "tags": [
+                    "Apps"
+                ],
+                "summary": "Get relevant info for an IskayPet app",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Application name",
+                        "name": "app_name",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/apps/types": {
+            "get": {
+                "description": "For example: app_name: users-api, key: token, value: hash",
+                "tags": [
+                    "Apps"
+                ],
+                "summary": "Get all application types (backend, frontend, etc.)",
+                "responses": {}
+            }
+        },
+        "/apps/{appId}/secrets": {
+            "post": {
+                "tags": [
+                    "Apps"
+                ],
+                "summary": "Creates secret for application",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "App ID",
+                        "name": "appId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Body params",
+                        "name": "createAppSecretModel",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.CreateAppSecretModel"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/ping": {
+            "get": {
+                "description": "Health",
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "Check"
+                ],
+                "summary": "Check if the instance is healthy or unhealthy",
+                "responses": {
+                    "200": {
+                        "description": "pong",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -63,6 +137,31 @@
                     "type": "integer"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.CreateAppModel": {
+            "type": "object",
+            "properties": {
+                "app_type_id": {
+                    "type": "integer"
+                },
+                "group_id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.CreateAppSecretModel": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string"
+                },
+                "value": {
                     "type": "string"
                 }
             }
