# internal/model/create_app_model.go
@@ -1,5 +1,7 @@
 package model
 
+// CreateAppModel Model
+// swagger:model CreateAppModel
 type CreateAppModel struct {
 	Name      string `json:"name,omitempty"`
 	GroupID   int64  `json:"group_id,omitempty"`
