# internal/module/routes.go
@@ -14,7 +14,7 @@ func Routes() func(*server.Routes) {
 		routes.Add(MethodPost, "/apps", AppHandler{}.CreateApp)
 		routes.Add(MethodGet, "/apps/types", AppHandler{}.GetAppTypes)
 		routes.Add(MethodGet, "/apps/search", AppHandler{}.GetApp)
-		routes.Add(MethodGet, "/apps/conf", AppHandler{}.GetAppConf)
+		routes.Add(MethodPost, "/apps/:appId/secrets", AppHandler{}.CreateSecret)
 	}
 	return routes
 }
